@@ -36,6 +36,7 @@ import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
@@ -73,6 +74,7 @@ import org.apache.http.entity.mime.content.StringBody;
 import org.apache.http.message.BasicHeader;
 import org.apache.http.message.BasicNameValuePair;
 import org.apache.solr.client.solrj.ResponseParser;
+import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.V2RequestSupport;
@@ -147,7 +149,7 @@ public class HttpSolrClient extends BaseHttpSolrClient {
   private volatile boolean useMultiPartPost;
   private final boolean internalClient;
 
-  private volatile Set<String> queryParams = Collections.emptySet();
+  private volatile Set<String> urlParamNames = Set.of();
   private volatile Integer connectionTimeout;
   private volatile Integer soTimeout;
 
@@ -164,35 +166,58 @@ public class HttpSolrClient extends BaseHttpSolrClient {
     }
 
     if (builder.httpClient != null) {
-      this.httpClient = builder.httpClient;
       this.internalClient = false;
+      this.followRedirects = builder.followRedirects;
+      this.httpClient = builder.httpClient;
+
     } else {
       this.internalClient = true;
+      this.followRedirects = builder.followRedirects;
       ModifiableSolrParams params = new ModifiableSolrParams();
       params.set(HttpClientUtil.PROP_FOLLOW_REDIRECTS, followRedirects);
       params.set(HttpClientUtil.PROP_ALLOW_COMPRESSION, builder.compression);
       httpClient = HttpClientUtil.createClient(params);
     }
 
+    if (builder.requestWriter != null) {
+      this.requestWriter = builder.requestWriter;
+    }
+
     this.parser = builder.responseParser;
     this.invariantParams = builder.invariantParams;
     this.connectionTimeout = builder.connectionTimeoutMillis;
     this.soTimeout = builder.socketTimeoutMillis;
+    this.useMultiPartPost = builder.useMultiPartPost;
+    this.urlParamNames = builder.urlParamNames;
   }
 
+  /**
+   * @deprecated use {@link #getUrlParamNames()}
+   */
+  @Deprecated
   public Set<String> getQueryParams() {
-    return queryParams;
+    return getUrlParamNames();
+  }
+
+  public Set<String> getUrlParamNames() {
+    return urlParamNames;
   }
 
   /**
    * Expert Method
    *
-   * @param queryParams set of param keys to only send via the query string Note that the param will
-   *     be sent as a query string if the key is part of this Set or the SolrRequest's query params.
+   * @param urlParamNames set of param keys to only send via the query string Note that the param
+   *     will be sent as a query string if the key is part of this Set or the SolrRequest's query
+   *     params.
+   *     <p>{@link SolrClient} setters can be unsafe when the involved {@link SolrClient} is used in
+   *     multiple threads simultaneously. To avoid this, use {@link
+   *     Builder#withTheseParamNamesInTheUrl(Set)}.
    * @see org.apache.solr.client.solrj.SolrRequest#getQueryParams
+   * @deprecated use {@link Builder#withTheseParamNamesInTheUrl(Set)} instead
    */
-  public void setQueryParams(Set<String> queryParams) {
-    this.queryParams = queryParams;
+  @Deprecated
+  public void setQueryParams(Set<String> urlParamNames) {
+    this.urlParamNames = urlParamNames;
   }
 
   /**
@@ -421,7 +446,7 @@ public class HttpSolrClient extends BaseHttpSolrClient {
 
       } else if (streams == null || isMultipart) {
         // send server list and request list as query string params
-        ModifiableSolrParams queryParams = calculateQueryParams(this.queryParams, wparams);
+        ModifiableSolrParams queryParams = calculateQueryParams(this.urlParamNames, wparams);
         queryParams.add(calculateQueryParams(request.getQueryParams(), wparams));
         String fullQueryUrl = url + queryParams.toQueryString();
         HttpEntityEnclosingRequestBase postOrPut =
@@ -508,7 +533,7 @@ public class HttpSolrClient extends BaseHttpSolrClient {
       for (ContentStream content : streams) {
         String contentType = content.getContentType();
         if (contentType == null) {
-          contentType = BinaryResponseParser.BINARY_CONTENT_TYPE; // default
+          contentType = "multipart/form-data"; // default
         }
         String name = content.getName();
         if (name == null) {
@@ -812,7 +837,13 @@ public class HttpSolrClient extends BaseHttpSolrClient {
    *
    * In this case the client is more flexible and can be used to send requests to any cores. The
    * cost of this is that the core must be specified on each request.
+   *
+   * <p>{@link SolrClient} setters can be unsafe when the involved {@link SolrClient} is used in
+   * multiple threads simultaneously.
+   *
+   * @deprecated use {@link Builder} instead
    */
+  @Deprecated
   public void setBaseURL(String baseUrl) {
     this.baseUrl = baseUrl;
   }
@@ -824,12 +855,14 @@ public class HttpSolrClient extends BaseHttpSolrClient {
   /**
    * Note: This setter method is <b>not thread-safe</b>.
    *
-   * @param processor Default Response Parser chosen to parse the response if the parser were not
+   * @param parser Default Response Parser chosen to parse the response if the parser were not
    *     specified as part of the request.
    * @see org.apache.solr.client.solrj.SolrRequest#getResponseParser()
+   * @deprecated use {@link Builder#withResponseParser(ResponseParser)} instead
    */
-  public void setParser(ResponseParser processor) {
-    parser = processor;
+  @Deprecated
+  public void setParser(ResponseParser parser) {
+    this.parser = parser;
   }
 
   /** Return the HttpClient this instance uses. */
@@ -841,12 +874,25 @@ public class HttpSolrClient extends BaseHttpSolrClient {
    * Configure whether the client should follow redirects or not.
    *
    * <p>This defaults to false under the assumption that if you are following a redirect to get to a
-   * Solr installation, something is misconfigured somewhere.
+   * Solr installation, something is configured wrong somewhere.
+   *
+   * @deprecated use {@link Builder#withFollowRedirects(boolean)} Redirects(boolean)} instead
    */
+  @Deprecated
   public void setFollowRedirects(boolean followRedirects) {
     this.followRedirects = followRedirects;
   }
 
+  /**
+   * Choose the {@link RequestWriter} to use.
+   *
+   * <p>By default, {@link BinaryRequestWriter} is used.
+   *
+   * <p>Note: This setter method is <b>not thread-safe</b>.
+   *
+   * @deprecated use {@link Builder#withRequestWriter(RequestWriter)} instead
+   */
+  @Deprecated
   public void setRequestWriter(RequestWriter requestWriter) {
     this.requestWriter = requestWriter;
   }
@@ -863,7 +909,14 @@ public class HttpSolrClient extends BaseHttpSolrClient {
     return useMultiPartPost;
   }
 
-  /** Set the multipart connection properties */
+  /**
+   * Set the multipart connection properties
+   *
+   * <p>Note: This setter method is <b>not thread-safe</b>.
+   *
+   * @deprecated use {@link Builder#allowMultiPartPost(Boolean)} instead
+   */
+  @Deprecated
   public void setUseMultiPartPost(boolean useMultiPartPost) {
     this.useMultiPartPost = useMultiPartPost;
   }
@@ -940,7 +993,13 @@ public class HttpSolrClient extends BaseHttpSolrClient {
      * In this case the client is more flexible and can be used to send requests to any cores. This
      * flexibility though requires that the core be specified on all requests.
      *
-     * <p>By default, compression is not enabled on created HttpSolrClient objects.
+     * <p>By default, compression is not enabled on created HttpSolrClient objects. By default,
+     * redirects are not followed in created HttpSolrClient objects. By default, {@link
+     * BinaryRequestWriter} is used for composing requests. By default, {@link BinaryResponseParser}
+     * is used for parsing responses.
+     *
+     * @param baseSolrUrl the base URL of the Solr server that will be targeted by any created
+     *     clients.
      */
     public Builder(String baseSolrUrl) {
       this.baseSolrUrl = baseSolrUrl;
@@ -993,6 +1052,15 @@ public class HttpSolrClient extends BaseHttpSolrClient {
       if (this.invariantParams.get(DelegationTokenHttpSolrClient.DELEGATION_TOKEN_PARAM) == null) {
         return new HttpSolrClient(this);
       } else {
+        urlParamNames =
+            urlParamNames == null
+                ? Set.of(DelegationTokenHttpSolrClient.DELEGATION_TOKEN_PARAM)
+                : urlParamNames;
+        if (!urlParamNames.contains(DelegationTokenHttpSolrClient.DELEGATION_TOKEN_PARAM)) {
+          urlParamNames = new HashSet<>(urlParamNames);
+          urlParamNames.add(DelegationTokenHttpSolrClient.DELEGATION_TOKEN_PARAM);
+        }
+        urlParamNames = Set.copyOf(urlParamNames);
         return new DelegationTokenHttpSolrClient(this);
       }
     }
